# splitbill

./: .buildinfo  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.txt  download.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  vcpkg-configuration.json  vcpkg.json
.doctrees/: download.doctree  environment.pickle  index.doctree
.github/workflows/: main.yml
_sources/: download.rst.txt
_static/: splitbill-0.1.0-Darwin.dmg.md5  splitbill-0.1.0-Darwin.zip.md5  splitbill-0.1.0-Linux.deb  splitbill-0.1.0-Linux.deb.md5  splitbill-0.1.0-Linux.tar.bz2  splitbill-0.1.0-Linux.tar.bz2.md5  splitbill-0.1.0-Linux.tar.gz.md5  splitbill-0.1.0-win64.exe.md5  splitbill-0.1.0-win64.zip.md5  splitbill-0.1.1-Linux.deb  splitbill-0.1.1-Linux.deb.md5  splitbill-0.1.1-Linux.deb.sha256  splitbill-0.1.1-Linux.rpm  splitbill-0.1.1-Linux.rpm.sha256  splitbill-0.1.1-Linux.tar.bz2  splitbill-0.1.1-Linux.tar.bz2.md5  splitbill-0.1.1-Linux.tar.gz.md5  splitbill-0.1.1-Linux.tar.gz.sha256  splitbill-0.1.1-win64.exe.md5  splitbill-0.1.1-win64.exe.sha256  splitbill-0.1.1-win64.zip.md5  splitbill-0.1.1-win64.zip.sha256
cmake/: Windeployqt.cmake  conan.cmake  install.cmake  license.cmake
doc/: .gitignore  CMakeLists.txt  conf.py.in  download.rst.in  index.rst  requirements.txt
include/lib/: .gitignore  Bill.h  Money.h
meta/linux/: splitbill.desktop
meta/macos/: Info.plist
resources/: 3rd-party.md  CMakeLists.txt  app-icon.icns  resources.qrc
scripts/: generate_currency_map.py
src/: CMakeLists.txt  config.h.in
src/lib/: Bill.cpp  Bill.h  CMakeLists.txt  Money.cpp
src/ui/: AboutDialog.cpp  AboutDialog.h  BillLineDelegate.cpp  BillLineDelegate.h  BillLineModel.cpp  BillLineModel.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  PersonListDelegate.cpp  PersonListDelegate.h  PersonListModel.cpp  PersonListModel.h  Settings.h  SettingsDialog.cpp  SettingsDialog.h  SplitViewModel.cpp  SplitViewModel.h  config.h.in  main.cpp  trans.h
tests/: CMakeLists.txt
tests/lib/: BillTest.cpp  CMakeLists.txt
